--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -6,8 +6,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-	 crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link href="../CSS/custom.css" rel="stylesheet">
 	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32" />
 	<title>Courses</title>
@@ -21,8 +21,8 @@
 			<a class="navbar-brand" href="index.html">
 				<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top">
 			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-			 aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
@@ -60,17 +60,18 @@
 			<p>
 				I am currently majoring in software engineering at the University of Calgary.
 				The current software engineering curriculum and course descriptions can be found
-				<a href="https://www.ucalgary.ca/pubs/calendar/current/en-4-9.html"> here</a>. Hover over a course to view its
+				<a href="https://www.ucalgary.ca/pubs/calendar/current/en-4-9.html"> here</a>. Hover over a course to
+				view its
 				title.
 			</p>
 		</div>
 		<hr>
 		<table class="table table-bordered table-hover">
 			<thead>
-				<tr class="table-primary">
+				<tr class="academic_year">
 					<th colspan="4" scope="colgroup">Year 1 (2015 - 2016)</th>
 				</tr>
-				<tr class="table-success">
+				<tr class="academic_semester">
 					<th class="w-25" scope="col">FALL 2015</th>
 					<th class="w-25" scope="col">WINTER 2016</th>
 					<th class="w-25" scope="col">SPRING 2016</th>
@@ -113,10 +114,10 @@
 		<hr>
 		<table class="table table-bordered table-hover">
 			<thead>
-				<tr class="table-primary">
+				<tr class="academic_year">
 					<th colspan="4" scope="colgroup">Year 2 (2016 - 2017)</th>
 				</tr>
-				<tr class="table-success">
+				<tr class="academic_semester">
 					<th class="w-25" scope="col">FALL 2016</th>
 					<th class="w-25" scope="col">WINTER 2017</th>
 					<th class="w-25" scope="col">SPRING 2017</th>
@@ -159,10 +160,10 @@
 		<hr>
 		<table class="table table-bordered table-hover">
 			<thead>
-				<tr class="table-primary">
+				<tr class="academic_year">
 					<th colspan="4" scope="colgroup">Year 3 (2017 - 2018)</th>
 				</tr>
-				<tr class="table-success">
+				<tr class="academic_semester">
 					<th class="w-25" scope="col">FALL 2017</th>
 					<th class="w-25" scope="col">WINTER 2018</th>
 					<th class="w-25" scope="col">SPRING 2018</th>
@@ -204,10 +205,10 @@
 		<hr>
 		<table class="table table-bordered table-hover">
 			<thead>
-				<tr class="table-primary">
+				<tr class="academic_year">
 					<th colspan="4" scope="colgroup">Year 4 (2018 - 2019)</th>
 				</tr>
-				<tr class="table-success">
+				<tr class="academic_semester">
 					<th class="w-25" scope="col">FALL 2018</th>
 					<th class="w-25" scope="col">WINTER 2019</th>
 					<th class="w-25" scope="col">SPRING 2019</th>
@@ -216,26 +217,37 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td title="Internship in Engineering II" rowspan="5">INTE 513.02</td>
-					<td title="Internship in Engineering III" rowspan="5">INTE 513.03</td>
-					<td title="Undergraduate Summer Research" colspan="2" rowspan="5">UNDERGRADUATE RESEARCH</td>
+					<td title="Internship in Engineering II">INTE 513.02</td>
+					<td title="Internship in Engineering III">INTE 513.03</td>
+					<td title="Undergraduate Summer Research" colspan="2"">UNDERGRADUATE RESEARCH</td>
 				</tr>
 			</tbody>
 		</table>
 		<hr>
-		<table class="table table-bordered table-hover">
-			<thead>
-				<tr class="table-primary">
-					<th colspan="4" scope="colgroup">Year 5 (2019 - 2020)</th>
-				</tr>
-				<tr class="table-success">
-					<th class="w-25" scope="col">FALL 2019</th>
-					<th class="w-25" scope="col">WINTER 2020</th>
-					<th class="w-25" scope="col">SPRING 2020</th>
-					<th class="w-25" scope="col">SUMMER 2020</th>
-				</tr>
-			</thead>
+		<table class=" table table-bordered table-hover">
+						<thead>
+							<tr class="academic_year">
+								<th colspan="4" scope="colgroup">Year 5 (2019 - 2020)</th>
+							</tr>
+							<tr class="academic_semester">
+								<th class="w-25" scope="col">FALL 2019</th>
+								<th class="w-25" scope="col">WINTER 2020</th>
+								<th class="w-25" scope="col">SPRING 2020</th>
+								<th class="w-25" scope="col">SUMMER 2020</th>
+							</tr>
+						</thead>
 			<tbody>
+				<tr>
+					<td title="Entrepreneurial Capstone Design Project I">ENGG 503</td>
+					<td title="Entrepreneurial Capstone Design Project II">ENGG 504</td>
+					<td title="Undergraduate Summer Research" colspan="2"">RELAXATION BEFORE GRADUATE SCHOOL</td>
+				</tr>
+				<tr>
+					<td title=" Undergraduate Research Thesis I">ENEL 592</td>
+					<td title="	Undergraduate Research Thesis II">ENEL 594</td>
+					<td title=""></td>
+					<td title=""></td>
+				</tr>
 				<tr>
 					<td title="Software Process and Project Management">SENG 511</td>
 					<td title="Design and Analysis of Algorithms I">CPSC 413</td>
@@ -243,25 +255,14 @@
 					<td title=""></td>
 				</tr>
 				<tr>
-					<td title="Computer, Electrical, and Software Engineering Team Design" colspan="2">ENEL 500</td>
+					<td title="Special Topics in Software Engineering: Applied Data Science">ENSF 519.01</td>
 					<td title=""></td>
-					<td title=""></td>
-				</tr>
-				<tr>
-					<td title="Undergraduate Research Thesis I">ENEL 592</td>
-					<td title="	Undergraduate Research Thesis II">ENEL 594</td>
 					<td title=""></td>
 					<td title=""></td>
 				</tr>
 				<tr>
-					<td title="Artificial Intelligence">CPSC 433</td>
-					<td title="Emergent Computing">CPSC 565</td>
 					<td title=""></td>
 					<td title=""></td>
-				</tr>
-				<tr>
-					<td title="Undecided Elective">[Elective]</td>
-					<td title="Undecided Elective">[Elective]</td>
 					<td title=""></td>
 					<td title=""></td>
 				</tr>
@@ -272,12 +273,15 @@
 			<a href="#top" class="btn btn-outline-info">Back to Top</a>
 		</p>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-	 crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-	 crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-	 crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+	</script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+	</script>
 </body>
 
 </html>
