Fix course formatting and update summer research

--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -219,23 +219,23 @@
 				<tr>
 					<td title="Internship in Engineering II">INTE 513.02</td>
 					<td title="Internship in Engineering III">INTE 513.03</td>
-					<td title="Undergraduate Summer Research" colspan="2"">UNDERGRADUATE RESEARCH</td>
+					<td title="Student Researcher 16 weeks" colspan="2"">RVST 598.03</td>
 				</tr>
 			</tbody>
 		</table>
 		<hr>
-		<table class=" table table-bordered table-hover">
-						<thead>
-							<tr class="academic_year">
-								<th colspan="4" scope="colgroup">Year 5 (2019 - 2020)</th>
-							</tr>
-							<tr class="academic_semester">
-								<th class="w-25" scope="col">FALL 2019</th>
-								<th class="w-25" scope="col">WINTER 2020</th>
-								<th class="w-25" scope="col">SPRING 2020</th>
-								<th class="w-25" scope="col">SUMMER 2020</th>
-							</tr>
-						</thead>
+		<table class="table table-bordered table-hover">
+			<thead>
+				<tr class="academic_year">
+					<th colspan="4" scope="colgroup">Year 5 (2019 - 2020)</th>
+				</tr>
+				<tr class="academic_semester">
+					<th class="w-25" scope="col">FALL 2019</th>
+					<th class="w-25" scope="col">WINTER 2020</th>
+					<th class="w-25" scope="col">SPRING 2020</th>
+					<th class="w-25" scope="col">SUMMER 2020</th>
+				</tr>
+			</thead>
 			<tbody>
 				<tr>
 					<td title="Entrepreneurial Capstone Design Project I">ENGG 503</td>
@@ -243,8 +243,8 @@
 					<td title="Undergraduate Summer Research" colspan="2"">RELAXATION BEFORE GRADUATE SCHOOL</td>
 				</tr>
 				<tr>
-					<td title=" Undergraduate Research Thesis I">ENEL 592</td>
-					<td title="	Undergraduate Research Thesis II">ENEL 594</td>
+					<td title="Undergraduate Research Thesis I">ENEL 592</td>
+					<td title="Undergraduate Research Thesis II">ENEL 594</td>
 					<td title=""></td>
 					<td title=""></td>
 				</tr>
