--- a/HTML/about.html
+++ b/HTML/about.html
@@ -26,7 +26,7 @@
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
+				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
 						<a class="nav-link" href="index.html">Home</a>
 					</li>
@@ -39,9 +39,6 @@
 					<li class="nav-item">
 						<a class="nav-link" href="gallery.html">Gallery</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/CR4-DL">CR4-DL</a>
-					</li>
 					<li class="nav-item active">
 						<a class="nav-link" href="about.html">About
 							<span class="sr-only">(current)</span>
@@ -49,6 +46,14 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="contact.html">Contact</a>
+					</li>
+				</ul>
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="/CR4-DL">CR4-DL</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/Cadence">Cadence</a>
 					</li>
 				</ul>
 			</div>
