--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -26,7 +26,7 @@
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
+				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
 						<a class="nav-link" href="index.html">Home</a>
 					</li>
@@ -42,13 +42,18 @@
 						<a class="nav-link" href="gallery.html">Gallery</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/CR4-DL">CR4-DL</a>
-					</li>
-					<li class="nav-item">
 						<a class="nav-link" href="about.html">About</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="contact.html">Contact</a>
+					</li>
+				</ul>
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="/CR4-DL">CR4-DL</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/Cadence">Cadence</a>
 					</li>
 				</ul>
 			</div>
@@ -224,26 +229,26 @@
 			</tbody>
 		</table>
 		<hr>
-		<table class="table table-bordered table-hover">
-			<thead>
-				<tr class="academic_year">
-					<th colspan="4" scope="colgroup">Year 5 (2019 - 2020)</th>
-				</tr>
-				<tr class="academic_semester">
-					<th class="w-25" scope="col">FALL 2019</th>
-					<th class="w-25" scope="col">WINTER 2020</th>
-					<th class="w-25" scope="col">SPRING 2020</th>
-					<th class="w-25" scope="col">SUMMER 2020</th>
-				</tr>
-			</thead>
+		<table class=" table table-bordered table-hover">
+						<thead>
+							<tr class="academic_year">
+								<th colspan="4" scope="colgroup">Year 5 (2019 - 2020)</th>
+							</tr>
+							<tr class="academic_semester">
+								<th class="w-25" scope="col">FALL 2019</th>
+								<th class="w-25" scope="col">WINTER 2020</th>
+								<th class="w-25" scope="col">SPRING 2020</th>
+								<th class="w-25" scope="col">SUMMER 2020</th>
+							</tr>
+						</thead>
 			<tbody>
 				<tr>
 					<td title="Entrepreneurial Capstone Design Project I">ENGG 503</td>
 					<td title="Entrepreneurial Capstone Design Project II">ENGG 504</td>
-					<td title="Undergraduate Summer Research" colspan="2"">RELAXATION BEFORE GRADUATE SCHOOL</td>
+					<td title="Relaxation before masters degree" colspan="2"">RELAXATION BEFORE GRADUATE SCHOOL</td>
 				</tr>
 				<tr>
-					<td title="Undergraduate Research Thesis I">ENEL 592</td>
+					<td title=" Undergraduate Research Thesis I">ENEL 592</td>
 					<td title="Undergraduate Research Thesis II">ENEL 594</td>
 					<td title=""></td>
 					<td title=""></td>
