--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -6,8 +6,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-	 crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link href="../CSS/custom.css" rel="stylesheet">
 	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32" />
 	<title>Projects</title>
@@ -21,12 +21,12 @@
 			<a class="navbar-brand" href="index.html">
 				<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top">
 			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-			 aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
+				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
 						<a class="nav-link" href="index.html">Home</a>
 					</li>
@@ -42,13 +42,18 @@
 						<a class="nav-link" href="gallery.html">Gallery</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/CR4-DL">CR4-DL</a>
-					</li>
-					<li class="nav-item">
 						<a class="nav-link" href="about.html">About</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="contact.html">Contact</a>
+					</li>
+				</ul>
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="/CR4-DL">CR4-DL</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/Cadence">Cadence</a>
 					</li>
 				</ul>
 			</div>
@@ -70,12 +75,15 @@
 				<a href="https://brianpho.com/CR4-DL/" class="btn btn-outline-primary">Visit CR4-DL</a>
 			</p>
 			<p>
-				I made another website (because I like making them) to store my notes on AI and the brain. The CR4-DL (Cradle) is
+				I made another website (because I like making them) to store my notes on AI and the brain. The CR4-DL
+				(Cradle) is
 				different
 				from this website because it was built using
-				<a href="https://jekyllrb.com/">Jekyll</a>, a static site generator. It was fun to modify the theme to fit my needs
+				<a href="https://jekyllrb.com/">Jekyll</a>, a static site generator. It was fun to modify the theme to
+				fit my needs
 				as it required changing some of the
-				<a href="https://shopify.github.io/liquid/">Liquid</a> code. Overall, I am very proud of the website because it
+				<a href="https://shopify.github.io/liquid/">Liquid</a> code. Overall, I am very proud of the website
+				because it
 				looks clean, the name is witty, the timeline is beautiful,
 				and because it will eventually store the fruits of my self-studying labor.
 			</p>
@@ -114,23 +122,30 @@
 		<div class="container p-5" style="background-color: #fde2e2;">
 			<h2 class="text-center ">ENSF 480: Bug Tracking System (Nov 2017)</h2>
 			<p>
-				<a href="https://github.com/Brian-Pho/ENSF480_Bug-Tracking-System" class="btn btn-outline-primary">Source Code</a>
+				<a href="https://github.com/Brian-Pho/ENSF480_Bug-Tracking-System"
+					class="btn btn-outline-primary">Source Code</a>
 			</p>
 			<p>
-				The goal of this project was to build a system to store and track software bugs. A user is able to submit a bug
+				The goal of this project was to build a system to store and track software bugs. A user is able to
+				submit a bug
 				report that
-				is then approved by a manager. Once the manager approves/disapproves of the bug, it's then assigned to a developer
+				is then approved by a manager. Once the manager approves/disapproves of the bug, it's then assigned to a
+				developer
 				to
 				be fixed. When the bug is fixed, the developer marks the bug as fixed and carries on.
 			</p>
 			<p>
-				From this project, I learned how a software engineer might go through the process of developing a good piece of
+				From this project, I learned how a software engineer might go through the process of developing a good
+				piece of
 				software.
-				It was interesting how the initial analysis and design phases made it easier to implement the program afterwards as
+				It was interesting how the initial analysis and design phases made it easier to implement the program
+				afterwards as
 				most
-				of the thinking had been done during those two phases. The implementation required converting various diagrams into
+				of the thinking had been done during those two phases. The implementation required converting various
+				diagrams into
 				code
-				which wasn't too bad. I had some fun times during the project such as implementing a singleton design pattern for
+				which wasn't too bad. I had some fun times during the project such as implementing a singleton design
+				pattern for
 				the
 				login and creating the GUIs.
 			</p>
@@ -173,27 +188,36 @@
 		<div class="container p-5" style="background-color: #fdece2;">
 			<h2 class="text-center ">Personal: Website (July 2017)</h2>
 			<p>
-				<a href="https://github.com/Brian-Pho/Brian-Pho.github.io" class="btn btn-outline-primary">Source Code</a>
+				<a href="https://github.com/Brian-Pho/Brian-Pho.github.io" class="btn btn-outline-primary">Source
+					Code</a>
 			</p>
 			<p>
-				This website, the one you're reading this on, is a personal project of mine that I made (from scratch) over my
+				This website, the one you're reading this on, is a personal project of mine that I made (from scratch)
+				over my
 				summer break.
-				I wanted to make a website for multiple reasons. My first reason was to learn a new programming language (HTML and
+				I wanted to make a website for multiple reasons. My first reason was to learn a new programming language
+				(HTML and
 				CSS)
-				and to apply it immediately. My second reason was because I will be applying to internship positions soon and
+				and to apply it immediately. My second reason was because I will be applying to internship positions
+				soon and
 				having
-				a website is useful to showcase my past projects and present info about me. My last reason was because I love
+				a website is useful to showcase my past projects and present info about me. My last reason was because I
+				love
 				programming
 				and find it fun!
 			</p>
 			<p>
-				This is the first time I've programmed in HTML and it's different from the Java and C programming that I'd
+				This is the first time I've programmed in HTML and it's different from the Java and C programming that
+				I'd
 				previously done.
-				HTML is similar to LaTeX, a language used for note taking, so I learned it quickly. I also owe my knowledge to the
+				HTML is similar to LaTeX, a language used for note taking, so I learned it quickly. I also owe my
+				knowledge to the
 				textbook
-				<i>HTML and CSS: Design and Build Websites</i> by Jon Duckett. I read this textbook to learn HTML and CSS and it
+				<i>HTML and CSS: Design and Build Websites</i> by Jon Duckett. I read this textbook to learn HTML and
+				CSS and it
 				made them
-				easy for me to understand. This website is currently hosted using Github Pages. The header font is Open Sans and
+				easy for me to understand. This website is currently hosted using Github Pages. The header font is Open
+				Sans and
 				the
 				text font is Roboto which are both provided by Google Fonts.
 			</p>
@@ -224,23 +248,30 @@
 		<div class="container p-5" style="background-color: #e3f2fd;">
 			<h2 class="text-center ">CPSC 471: Library App (June 2017)</h2>
 			<p>
-				<a href="https://github.com/Brian-Pho/CPSC471_Library-App" class="btn btn-outline-primary">Source Code</a>
+				<a href="https://github.com/Brian-Pho/CPSC471_Library-App" class="btn btn-outline-primary">Source
+					Code</a>
 			</p>
 			<p>
-				This project was done in a group of three and I was assigned to do the UI aspect of the app. My group had to create
+				This project was done in a group of three and I was assigned to do the UI aspect of the app. My group
+				had to create
 				an app
-				that connected to a database (mySQL) and retrieved data from the database using SQL queries. This project was
+				that connected to a database (mySQL) and retrieved data from the database using SQL queries. This
+				project was
 				challenging
-				because the project required the use of multiple programming languages (Java, SQL, PHP, and XML) and required the
+				because the project required the use of multiple programming languages (Java, SQL, PHP, and XML) and
+				required the
 				use
 				of an external server to host the data.
 			</p>
 			<p>
-				The purpose of this project was to allow library users access to the library database via the app. There are two
+				The purpose of this project was to allow library users access to the library database via the app. There
+				are two
 				different
-				users: normal users and admins. There were a lot of functions that we had to incorporate such as search, add,
+				users: normal users and admins. There were a lot of functions that we had to incorporate such as search,
+				add,
 				delete,
-				and update which increased the complexity of the project. Overall, this project was very challenging but I learned
+				and update which increased the complexity of the project. Overall, this project was very challenging but
+				I learned
 				a
 				lot from it.
 			</p>
@@ -287,18 +318,22 @@
 		<div class="container p-5" style="background-color: #e4e2fd;">
 			<h2 class="text-center ">ENSF 409: Airline Management Program (April 2017)</h2>
 			<p>
-				<a href="https://github.com/Brian-Pho/ENSF409_Airlines-Registration-System" class="btn btn-outline-primary">Source
+				<a href="https://github.com/Brian-Pho/ENSF409_Airlines-Registration-System"
+					class="btn btn-outline-primary">Source
 					Code</a>
 			</p>
 			<p>
-				This was my first project that involved the use of a database (mySQL). This project was done in a group of three
+				This was my first project that involved the use of a database (mySQL). This project was done in a group
+				of three
 				where I
-				had the role of designing the UI for the program. The UI was built using Java and IntelliJ. The purpose of this
+				had the role of designing the UI for the program. The UI was built using Java and IntelliJ. The purpose
+				of this
 				program
 				was to connect to an external database and to relay information between the client and the server.
 			</p>
 			<p>
-				There are two different types of users: clients and admins. The program allows users to book a flight and view the
+				There are two different types of users: clients and admins. The program allows users to book a flight
+				and view the
 				current
 				flights to and from there destination. Only admins are able to add and view all tickets.
 			</p>
@@ -336,12 +371,15 @@
 			<a href="#top" class="btn btn-outline-info">Back to Top</a>
 		</p>
 	</footer>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-	 crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-	 crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-	 crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+	</script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+	</script>
 </body>
 
 </html>
