--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -60,7 +60,7 @@
 		</nav>
 	</header>
 	<div class="container text-center">
-		<h1 class="display-4">Courses Taken</h1>
+		<h1 class="display-4">Courses</h1>
 		<div class="lead text-left">
 			<p>
 				I am currently majoring in software engineering at the University of Calgary.
