--- a/HTML/index.html
+++ b/HTML/index.html
@@ -76,7 +76,7 @@
 	<canvas id="homepage-animation" class="container-fluid p-0"></canvas>
 
 	<!-- Pts JS -->
-	<script type="text/javascript" src="https://unpkg.com/pts@0.6.1/dist/pts.js"></script>
+	<script type="text/javascript" src="https://unpkg.com/pts@0.8.3/dist/pts.min.js"></script>
 	<script type="text/javascript" src="../JS/homepage.js"></script>
 	<!-- Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
