Update website with SER project

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -89,7 +89,6 @@
 				<li>Cognitive Science</li>
 				<li>Artificial Intelligence</li>
 				<li>Mastery/Expertise</li>
-				<li>Data Visualization</li>
 				<li>Writing</li>
 				<li>Space</li>
 			</ul>
@@ -102,8 +101,8 @@
 				<li>Investing (index funds)</li>
 				<li>IT stuff (the family IT guy)</li>
 				<li>Skincare (basics like sunscreen and cleanser)</li>
-				<li>Cooking (I want to pick this up)</li>
-				<li>Programming machine learning models</li>
+				<li>Cooking</li>
+				<li>ML programming</li>
 			</ul>
 		</div>
 		<hr>
@@ -116,9 +115,6 @@
 				</li>
 				<li>
 					<a href="https://www.youtube.com/watch?v=xKM-jgaOW2Y">Dabin - Alive (feat. RUNN)</a>
-				</li>
-				<li>
-					<a href="https://www.youtube.com/watch?v=eeIShEwMYwk">Illenium - Take You Down</a>
 				</li>
 				<li>
 					<a href="https://www.youtube.com/watch?v=xF-UznUkhP8">ODESZA - Falls (feat. Sasha Sloan)</a>
