--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -63,7 +63,8 @@
 		<h1 class="display-4">Courses</h1>
 		<div class="lead text-left">
 			<p>
-				I'm studying software engineering at the University of Calgary.
+				I'm studying software engineering at the University of Calgary and the courses below are ones that I
+				have taken or will take.
 				The current software engineering curriculum and course descriptions can be found
 				<a href="https://www.ucalgary.ca/pubs/calendar/current/en-4-9.html"> here</a>. Hover over a course to
 				view its
@@ -226,17 +227,17 @@
 			</tbody>
 		</table>
 		<table class=" table table-bordered table-hover">
-			<thead>
-				<tr class="academic_year">
-					<th colspan="4" scope="colgroup">Year 5 (2019 - 2020)</th>
-				</tr>
-				<tr class="academic_semester">
-					<th class="w-25" scope="col">FALL 2019</th>
-					<th class="w-25" scope="col">WINTER 2020</th>
-					<th class="w-25" scope="col">SPRING 2020</th>
-					<th class="w-25" scope="col">SUMMER 2020</th>
-				</tr>
-			</thead>
+						<thead>
+							<tr class="academic_year">
+								<th colspan="4" scope="colgroup">Year 5 (2019 - 2020)</th>
+							</tr>
+							<tr class="academic_semester">
+								<th class="w-25" scope="col">FALL 2019</th>
+								<th class="w-25" scope="col">WINTER 2020</th>
+								<th class="w-25" scope="col">SPRING 2020</th>
+								<th class="w-25" scope="col">SUMMER 2020</th>
+							</tr>
+						</thead>
 			<tbody>
 				<tr>
 					<td title="Entrepreneurial Capstone Design Project I">ENGG 503</td>
@@ -251,13 +252,13 @@
 				</tr>
 				<tr>
 					<td title="Software Process and Project Management">SENG 511</td>
-					<td title="Introduction to Information Visualization">CPSC 583</td>
+					<td title="Web-Based Systems">SENG 513</td>
 					<td title=""></td>
 					<td title=""></td>
 				</tr>
 				<tr>
 					<td title="Special Topics in Software Engineering: Applied Data Science">ENSF 519.01</td>
-					<td title="Web-Based Systems">SENG 513</td>
+					<td title=""></td>
 					<td title=""></td>
 					<td title=""></td>
 				</tr>
