--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -6,8 +6,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-	 crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link href="../CSS/custom.css" rel="stylesheet">
 	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32" />
 	<title>Gallery</title>
@@ -21,8 +21,8 @@
 			<a class="navbar-brand" href="index.html">
 				<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top">
 			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-			 aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
@@ -62,12 +62,13 @@
 	<div class="container text-center">
 		<h1 class="display-4">Gallery</h1>
 		<p class="lead">
-			The pictures are clickable.
+			Rare pictures of me in the wild. The pictures are somewhat misleading since I no longer wear glasses (got
+			implantable contact lenses). The pictures are clickable.
 		</p>
 		<hr> ​
 		<picture>
-			<img style="max-height:550px" src="../Images/BrianPho/brianpho1.jpg" class="img-fluid mb-1" data-toggle="modal"
-			 data-target="#brianpho1" alt="A picture of me" />
+			<img style="max-height:550px" src="../Images/BrianPho/brianpho1.jpg" class="img-fluid mb-1"
+				data-toggle="modal" data-target="#brianpho1" alt="A picture of me" />
 			<div class="modal fade" id="brianpho1" tabindex="-1" role="dialog" aria-hidden="true">
 				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
 					<div class="modal-content">
@@ -83,8 +84,8 @@
 					</div>
 				</div>
 			</div>
-			<img style="max-height:550px" src="../Images/BrianPho/brianpho2.jpg" class="img-fluid mb-1" data-toggle="modal"
-			 data-target="#brianpho2" alt="A picture of me" />
+			<img style="max-height:550px" src="../Images/BrianPho/brianpho2.jpg" class="img-fluid mb-1"
+				data-toggle="modal" data-target="#brianpho2" alt="A picture of me" />
 			<div class="modal fade" id="brianpho2" tabindex="-1" role="dialog" aria-hidden="true">
 				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
 					<div class="modal-content">
@@ -100,8 +101,8 @@
 					</div>
 				</div>
 			</div>
-			<img style="max-height:550px" src="../Images/BrianPho/brianpho3.jpg" class="img-fluid mb-1" data-toggle="modal"
-			 data-target="#brianpho3" alt="A picture of me" />
+			<img style="max-height:550px" src="../Images/BrianPho/brianpho3.jpg" class="img-fluid mb-1"
+				data-toggle="modal" data-target="#brianpho3" alt="A picture of me" />
 			<div class="modal fade" id="brianpho3" tabindex="-1" role="dialog" aria-hidden="true">
 				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
 					<div class="modal-content">
@@ -117,8 +118,8 @@
 					</div>
 				</div>
 			</div>
-			<img style="max-height:550px" src="../Images/BrianPho/brianpho4.jpg" class="img-fluid mb-1" data-toggle="modal"
-			 data-target="#brianpho4" alt="A picture of me" />
+			<img style="max-height:550px" src="../Images/BrianPho/brianpho4.jpg" class="img-fluid mb-1"
+				data-toggle="modal" data-target="#brianpho4" alt="A picture of me" />
 			<div class="modal fade" id="brianpho4" tabindex="-1" role="dialog" aria-hidden="true">
 				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
 					<div class="modal-content">
@@ -134,8 +135,8 @@
 					</div>
 				</div>
 			</div>
-			<img style="max-height:550px" src="../Images/BrianPho/brianpho5.jpg" class="img-fluid mb-1" data-toggle="modal"
-			 data-target="#brianpho5" alt="A picture of me" />
+			<img style="max-height:550px" src="../Images/BrianPho/brianpho5.jpg" class="img-fluid mb-1"
+				data-toggle="modal" data-target="#brianpho5" alt="A picture of me" />
 			<div class="modal fade" id="brianpho5" tabindex="-1" role="dialog" aria-hidden="true">
 				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
 					<div class="modal-content">
@@ -151,8 +152,8 @@
 					</div>
 				</div>
 			</div>
-			<img style="max-height:550px" src="../Images/BrianPho/brianpho6.jpg" class="img-fluid mb-1" data-toggle="modal"
-			 data-target="#brianpho6" alt="A picture of me" />
+			<img style="max-height:550px" src="../Images/BrianPho/brianpho6.jpg" class="img-fluid mb-1"
+				data-toggle="modal" data-target="#brianpho6" alt="A picture of me" />
 			<div class="modal fade" id="brianpho6" tabindex="-1" role="dialog" aria-hidden="true">
 				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
 					<div class="modal-content">
@@ -168,15 +169,16 @@
 					</div>
 				</div>
 			</div>
-			<img style="max-height:550px" src="../Images/BrianPho/brianpho7.jpg" class="img-fluid mb-1" data-toggle="modal"
-			 data-target="#brianpho7" alt="A picture of me" />
+			<img style="max-height:550px" src="../Images/BrianPho/brianpho7.jpg" class="img-fluid mb-1"
+				data-toggle="modal" data-target="#brianpho7" alt="A picture of me" />
 			<div class="modal fade" id="brianpho7" tabindex="-1" role="dialog" aria-hidden="true">
 				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
 					<div class="modal-content">
 						<div class="modal-body">
 							<figure class="figure">
 								<img src="../Images/BrianPho/brianpho7.jpg" class="img-fluid" alt="A picture of me">
-								<figcaption class="figure-caption">Pason Interns at the Christmas Dinner Party (2018)</figcaption>
+								<figcaption class="figure-caption">Pason Interns at the Christmas Dinner Party (2018)
+								</figcaption>
 							</figure>
 						</div>
 						<div class="modal-footer">
@@ -185,8 +187,8 @@
 					</div>
 				</div>
 			</div>
-			<img style="max-height:550px" src="../Images/BrianPho/brianpho8.jpg" class="img-fluid mb-1" data-toggle="modal"
-			 data-target="#brianpho8" alt="A picture of me" />
+			<img style="max-height:550px" src="../Images/BrianPho/brianpho8.jpg" class="img-fluid mb-1"
+				data-toggle="modal" data-target="#brianpho8" alt="A picture of me" />
 			<div class="modal fade" id="brianpho8" tabindex="-1" role="dialog" aria-hidden="true">
 				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
 					<div class="modal-content">
@@ -202,8 +204,8 @@
 					</div>
 				</div>
 			</div>
-			<img style="max-height:550px" src="../Images/BrianPho/brianpho9.jpg" class="img-fluid mb-1" data-toggle="modal"
-			 data-target="#brianpho9" alt="A picture of me" />
+			<img style="max-height:550px" src="../Images/BrianPho/brianpho9.jpg" class="img-fluid mb-1"
+				data-toggle="modal" data-target="#brianpho9" alt="A picture of me" />
 			<div class="modal fade" id="brianpho9" tabindex="-1" role="dialog" aria-hidden="true">
 				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
 					<div class="modal-content">
@@ -225,12 +227,15 @@
 			<a href="#top" class="btn btn-outline-info">Back to Top</a>
 		</p>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-	 crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-	 crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-	 crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+	</script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+	</script>
 </body>
 
 </html>
