--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -62,12 +62,59 @@
 	<div class="container text-left">
 		<h1 class="text-center display-4">Projects</h1>
 		<p class="lead">
-			I was involved in the following projects. The list is ordered with the most recent projects at the
-			top. Most of the projects have been a part of school but some of them are a personal. My GitHub can be found
-			<a href="https://github.com/Brian-Pho"> here</a>.
+			I was involved in the following projects of which, some are for school and some are my personal undertaking.
+			Most of the projects can be found on my GitHub
+			<a href="https://github.com/Brian-Pho">here</a>.
 		</p>
 		<hr>
 		<!-- Find additional project colors here: http://hslpicker.com/#ede2fd -->
+		<div class="container p-5" style="background-color: #fbe2fd;">
+			<h2 class="text-center">Personal: Speech Emotion Recognition Research Project (Aug 2019)</h2>
+			<p>
+				<a href="https://github.com/Brian-Pho/RVST598_Speech-Emotion-Recognition"
+					class="btn btn-outline-primary mr-2">Source Code</a>
+			</p>
+			<p>
+				I've wanted to pick up deep learning for a while now and this was my chance to do so. I applied for and
+				was awarded the PURE award, an award for students to pursue undergraduate research for a summer. During
+				the summer of 2019, I spent the first month reading a deep learning textbook just to pick up practical
+				deep learning skills (I already had a theoretical base for DL from taking a course). I then spent the
+				next three months working on a project to recognize emotions in speech. The project didn't turn out as
+				successful as I had hoped but it was a great learning experience and a good glimpse into the world of
+				academic research.
+			</p>
+			<div id="carouselSer" class="carousel slide" data-interval="false">
+				<ol class="carousel-indicators">
+					<li data-target="#carouselCradle" data-slide-to="0" class="active"></li>
+					<li data-target="#carouselCradle" data-slide-to="1"></li>
+					<li data-target="#carouselCradle" data-slide-to="2"></li>
+					<li data-target="#carouselCradle" data-slide-to="3"></li>
+				</ol>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<img class="d-block w-100" src="../Images/SER/ser1.png" alt="First slide">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block w-100" src="../Images/SER/ser2.png" alt="Second slide">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block w-100" src="../Images/SER/ser3.png" alt="Third slide">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block w-100" src="../Images/SER/ser4.png" alt="Fourth slide">
+					</div>
+				</div>
+				<a class="carousel-control-prev" href="#carouselSer" role="button" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="carousel-control-next" href="#carouselSer" role="button" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
+			</div>
+		</div>
+		<hr>
 		<div class="container p-5" style="background-color: #f0f0f0;">
 			<h2 class="text-center">Personal: CR4-DL (July 2018)</h2>
 			<p>
