Add another image of me

--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -221,6 +221,23 @@
 					</div>
 				</div>
 			</div>
+			<img style="max-height:550px" src="../Images/BrianPho/brianpho10.jpg" class="img-fluid mb-1" data-toggle="modal"
+				data-target="#brianpho10" alt="A picture of me" />
+			<div class="modal fade" id="brianpho10" tabindex="-1" role="dialog" aria-hidden="true">
+				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+					<div class="modal-content">
+						<div class="modal-body">
+							<figure class="figure">
+								<img src="../Images/BrianPho/brianpho10.jpg" class="img-fluid" alt="A picture of me">
+								<figcaption class="figure-caption">Me post-Lasik surgery with my favourite black coat (2019)</figcaption>
+							</figure>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
+						</div>
+					</div>
+				</div>
+			</div>
 		</picture>
 		<hr>
 		<p class="text-center">
