Fix w3 validator issues

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -11,7 +11,8 @@
 	<!-- Font Awesome JS -->
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 	<link href="../CSS/custom.css" rel="stylesheet">
-	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32"
+		alt="Brian Pho Favicon" />
 	<title>Contact</title>
 	<meta name="DESCRIPTION" content="This is information on how to contact Brian Pho." />
 	<meta name="KEYWORDS" content="Brian Pho, contact" />
@@ -146,7 +147,6 @@
 		<a class="m-1" href="mailto:brainic777@gmail.com">
 			<i class="fas fa-envelope-square fa-2x" style="color: black"></i>
 		</a>
-	</div>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
 		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
