--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -9,7 +9,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link href="../CSS/custom.css" rel="stylesheet">
-	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32"
+		alt="Brian Pho Favicon" />
 	<title>Courses</title>
 	<meta name="DESCRIPTION" content="These are the courses that Brian Pho has taken." />
 	<meta name="KEYWORDS" content="Brian Pho, courses" />
@@ -222,27 +223,27 @@
 				<tr>
 					<td title="Internship in Engineering II">INTE 513.02</td>
 					<td title="Internship in Engineering III">INTE 513.03</td>
-					<td title="Student Researcher 16 weeks" colspan="2"">RVST 598.03</td>
+					<td title="Student Researcher 16 weeks" colspan="2">RVST 598.03</td>
 				</tr>
 			</tbody>
 		</table>
 		<table class=" table table-bordered table-hover">
-						<thead>
-							<tr class="academic_year">
-								<th colspan="4" scope="colgroup">Year 5 (2019 - 2020)</th>
-							</tr>
-							<tr class="academic_semester">
-								<th class="w-25" scope="col">FALL 2019</th>
-								<th class="w-25" scope="col">WINTER 2020</th>
-								<th class="w-25" scope="col">SPRING 2020</th>
-								<th class="w-25" scope="col">SUMMER 2020</th>
-							</tr>
-						</thead>
+			<thead>
+				<tr class="academic_year">
+					<th colspan="4" scope="colgroup">Year 5 (2019 - 2020)</th>
+				</tr>
+				<tr class="academic_semester">
+					<th class="w-25" scope="col">FALL 2019</th>
+					<th class="w-25" scope="col">WINTER 2020</th>
+					<th class="w-25" scope="col">SPRING 2020</th>
+					<th class="w-25" scope="col">SUMMER 2020</th>
+				</tr>
+			</thead>
 			<tbody>
 				<tr>
 					<td title="Entrepreneurial Capstone Design Project I">ENGG 503</td>
 					<td title="Entrepreneurial Capstone Design Project II">ENGG 504</td>
-					<td title="Relaxing before masters degree" colspan="2"">RELAXING BEFORE GRADUATE SCHOOL</td>
+					<td title="Relaxing before masters degree" colspan="2">RELAXING BEFORE GRADUATE SCHOOL</td>
 				</tr>
 				<tr>
 					<td title=" Undergraduate Research Thesis I">ENEL 592</td>
