--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -9,7 +9,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link href="../CSS/custom.css" rel="stylesheet">
-	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32"
+		alt="Brian Pho Favicon" />
 	<title>Gallery</title>
 	<meta name="DESCRIPTION" content="This is pictures of Brian Pho." />
 	<meta name="KEYWORDS" content="Brian Pho, pictures, gallery" />
@@ -221,15 +222,16 @@
 					</div>
 				</div>
 			</div>
-			<img style="max-height:550px" src="../Images/BrianPho/brianpho10.jpg" class="img-fluid mb-1" data-toggle="modal"
-				data-target="#brianpho10" alt="A picture of me" />
+			<img style="max-height:550px" src="../Images/BrianPho/brianpho10.jpg" class="img-fluid mb-1"
+				data-toggle="modal" data-target="#brianpho10" alt="A picture of me" />
 			<div class="modal fade" id="brianpho10" tabindex="-1" role="dialog" aria-hidden="true">
 				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
 					<div class="modal-content">
 						<div class="modal-body">
 							<figure class="figure">
 								<img src="../Images/BrianPho/brianpho10.jpg" class="img-fluid" alt="A picture of me">
-								<figcaption class="figure-caption">Me post-Lasik surgery with my favourite black coat (2019)</figcaption>
+								<figcaption class="figure-caption">Me post-Lasik surgery with my favourite black coat
+									(2019)</figcaption>
 							</figure>
 						</div>
 						<div class="modal-footer">
