--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,7 +9,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link href="../CSS/custom.css" rel="stylesheet">
-	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32"
+		alt="Brian Pho Favicon" />
 	<title>Home</title>
 	<meta name="DESCRIPTION" content="Brian Pho's Homepage" />
 	<meta name="KEYWORDS" content="Brian, Pho, homepage, website" />
@@ -76,8 +77,8 @@
 	<canvas id="homepage-animation" class="container-fluid p-0"></canvas>
 
 	<!-- Pts JS -->
-	<script type="text/javascript" src="https://unpkg.com/pts@0.8.8/dist/pts.min.js"></script>
-	<script type="text/javascript" src="../JS/homepage.js"></script>
+	<script src="https://unpkg.com/pts@0.8.8/dist/pts.min.js"></script>
+	<script src="../JS/homepage.js"></script>
 	<!-- Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
 		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
