Fix alt attribute on link tag

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -11,8 +11,7 @@
 	<!-- Font Awesome JS -->
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 	<link href="../CSS/custom.css" rel="stylesheet">
-	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32"
-		alt="Brian Pho Favicon" />
+	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32" />
 	<title>Contact</title>
 	<meta name="DESCRIPTION" content="This is information on how to contact Brian Pho." />
 	<meta name="KEYWORDS" content="Brian Pho, contact" />
@@ -22,7 +21,8 @@
 	<header>
 		<nav class="navbar fixed-top navbar-expand-lg navbar-light">
 			<a class="navbar-brand" href="index.html">
-				<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top">
+				<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top"
+					alt="Brian Pho Favicon">
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
 				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
