Minor updates to resume and site

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -64,7 +64,7 @@
 	<!-- Homepage left-center text -->
 	<div class="container-fluid position-fixed d-flex flex-column justify-content-center h-100 homepage-text">
 		<div class="row ml-4">
-			<h1 class="display-4" style="color: #E0FFEF">Brian Pho</h1>
+			<h1 class="display-4" style="color: #E0FFEF;">Brian Pho</h1>
 		</div>
 		<div class="row ml-4">
 			<div class="lead">BSc Software Engineering</div>
@@ -77,7 +77,7 @@
 	<canvas id="homepage-animation" class="container-fluid p-0"></canvas>
 
 	<!-- Pts JS -->
-	<script src="https://unpkg.com/pts@0.8.8/dist/pts.min.js"></script>
+	<script src="https://unpkg.com/pts@0.9.1/dist/pts.min.js"></script>
 	<script src="../JS/homepage.js"></script>
 	<!-- Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
