--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -110,31 +110,11 @@
 					</div>
 					<button type="submit" class="btn btn-outline-primary" id="btn">Submit</button>
 				</form>
-				<script>
-					// Example starter JavaScript for disabling form submissions if there are invalid fields
-					(function () {
-						'use strict';
-						window.addEventListener('load', function () {
-							// Fetch all the forms we want to apply custom Bootstrap validation styles to
-							var forms = document.getElementsByClassName('needs-validation');
-							// Loop over them and prevent submission
-							var validation = Array.prototype.filter.call(forms, function (form) {
-								form.addEventListener('submit', function (event) {
-									if (form.checkValidity() === false) {
-										event.preventDefault();
-										event.stopPropagation();
-									}
-									form.classList.add('was-validated');
-								}, false);
-							});
-						}, false);
-					})();
-				</script>
 			</div>
 		</div>
 		<hr>
 	</div>
-	<div class="text-center">
+	<div class="contact text-center">
 		<a class="m-1" href="https://www.facebook.com/BrianPho7">
 			<i class="fab fa-facebook fa-2x" style="color: black"></i>
 		</a>
@@ -148,6 +128,7 @@
 			<i class="fas fa-envelope-square fa-2x" style="color: black"></i>
 		</a>
 	</div>
+	<script src="../JS/form_validation.js"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
 		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
 	</script>
