Minor updates to courses and about pages

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -75,7 +75,7 @@
 		<div class="mx-auto text-left about">
 			<ul>
 				<li>Reading (science fiction, non-fiction, fantasy, textbooks, Reddit)</li>
-				<li>Video games (League of Legends, Teamfight Tactics, XCOM, Civ 5, Mini Metro)</li>
+				<li>Video games (League of Legends, Teamfight Tactics, XCOM, Civ 5, Mini Metro, FTL)</li>
 				<li>Watching TV shows, anime (<a href="https://myanimelist.net/profile/Brainiac777">MyAnimeList</a>),
 					and
 					movies (<a href="http://www.imdb.com/user/ur50206176/ratings?ref_=nv_usr_rt_4">IMDB</a>)</li>
@@ -89,8 +89,8 @@
 			<ul>
 				<li>Neuroscience</li>
 				<li>Artificial Intelligence</li>
-				<li>Mastery/Expertise</li>
-				<li>Space/Astronomy</li>
+				<li>Expertise</li>
+				<li>Space</li>
 			</ul>
 		</div>
 		<hr>
@@ -101,7 +101,7 @@
 				<li>Investing (index funds)</li>
 				<li>Skincare (basics like cleanser and sunscreen)</li>
 				<li>Cooking (steak, deep fried shrimp, homemade pasta)</li>
-				<li>ML programming</li>
+				<li>Machine learning programming</li>
 			</ul>
 		</div>
 		<hr>
