--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -65,10 +65,8 @@
 		<div class="lead text-left">
 			<p>
 				I've completed my bachelors in software engineering at the University of Calgary and have moved
-				on to a masters in neuroscience at Western University. I've transitioned into neuroscience
-				because I want to learn more about the brain to build artificial general intelligence. More information
-				about my motivation to switch fields can be found <a href="https://brianpho.com/CR4-DL/about/">
-					here</a>. Hover over a course to see its title.
+				on to a masters in neuroscience at Western University. If you're looking for my course notes, you can
+				find them <a href="https://brianpho.com/CR4-DL/notes/">here</a>. Hover over a course to see its title.
 			</p>
 		</div>
 		<hr>
@@ -316,12 +314,12 @@
 							<tbody>
 								<tr>
 									<td title="Perspectives in Neuroscience">NEUROSCI 9510Y</td>
-									<td title="Perspectives in Neuroscience">NEUROSCI 9511Y</td>
-									<td title="Perspectives in Neuroscience">NEUROSCI 9512Y</td>
+									<td title="Perspectives in Neuroscience">NEUROSCI 9510Y</td>
+									<td title="Perspectives in Neuroscience">NEUROSCI 9510Y</td>
 								</tr>
 								<tr>
 									<td title="Principles of Neuroscience">NEUROSCI 9500A</td>
-									<td title=""></td>
+									<td title="Biomedical Applications of Neural Networks">BIOPHYS 9709B</td>
 									<td title=""></td>
 								</tr>
 							</tbody>
@@ -339,14 +337,9 @@
 							</thead>
 							<tbody>
 								<tr>
-									<td title=""></td>
-									<td title=""></td>
-									<td title=""></td>
-								</tr>
-								<tr>
-									<td title=""></td>
-									<td title=""></td>
-									<td title=""></td>
+									<td title="Perspectives in Neuroscience">NEUROSCI 9511Y</td>
+									<td title="Perspectives in Neuroscience">NEUROSCI 9511Y</td>
+									<td title="Perspectives in Neuroscience">NEUROSCI 9511Y</td>
 								</tr>
 							</tbody>
 						</table>
