Add Goodreads profile

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -74,7 +74,7 @@
 		<h2>Hobbies</h2>
 		<div class="mx-auto text-left about">
 			<ul>
-				<li>Reading (science fiction, non-fiction, fantasy, textbooks, Reddit)</li>
+				<li>Reading (<a href="https://www.goodreads.com/brainiac777">Goodreads</a>)</li>
 				<li>Video games (League of Legends, Teamfight Tactics, XCOM, Civ 5, Mini Metro, FTL)</li>
 				<li>Watching TV shows, anime (<a href="https://myanimelist.net/profile/Brainiac777">MyAnimeList</a>),
 					and
