Update resume and add photo

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -69,13 +69,14 @@
 		<hr>
 		<h2>Resume</h2>
 		<p>
-			<a href="../Resume_Brian_Pho.pdf" target="_blank">Download Resume</a> (Last Updated Mar 2020)</p>
+			<a href="../Resume_Brian_Pho.pdf" target="_blank">Download Resume</a> (Last updated Feb 2021)</p>
 		<hr>
 		<h2>Hobbies</h2>
 		<div class="mx-auto text-left about">
 			<ul>
-				<li>Reading (<a href="https://www.goodreads.com/brainiac777">Goodreads</a>)</li>
-				<li>Video games (League of Legends, Teamfight Tactics, XCOM, Civ 5, Mini Metro, FTL)</li>
+				<li>Reading books, textbooks, academic papers, and online articles (<a
+						href="https://www.goodreads.com/brainiac777">Goodreads</a>)</li>
+				<li>Playing video games (League of Legends, Teamfight Tactics, XCOM, Civ 5, Mini Metro, and FTL)</li>
 				<li>Watching TV shows, anime (<a href="https://myanimelist.net/profile/Brainiac777">MyAnimeList</a>),
 					and
 					movies (<a href="http://www.imdb.com/user/ur50206176/ratings?ref_=nv_usr_rt_4">IMDB</a>)</li>
@@ -89,6 +90,7 @@
 			<ul>
 				<li>Neuroscience</li>
 				<li>Artificial Intelligence</li>
+				<li>Neuromorphic computing</li>
 				<li>Expertise</li>
 				<li>Space</li>
 			</ul>
@@ -98,9 +100,9 @@
 		<div class="mx-auto text-left about">
 			<ul>
 				<li>Building computers and IT</li>
-				<li>Investing (index funds)</li>
-				<li>Skincare (basics like cleanser and sunscreen)</li>
-				<li>Cooking (steak, deep fried shrimp, homemade pasta)</li>
+				<li>Investing (couch potato strategy using index funds and ETFs)</li>
+				<li>Skincare (basics like cleanser, moisturizer, and sunscreen)</li>
+				<li>Cooking (steak, deep fried shrimp, homemade pasta, and pan-fried chicken thighs)</li>
 				<li>Machine learning programming</li>
 			</ul>
 		</div>
@@ -135,15 +137,12 @@
 			<p>
 				"A great fire burns within me, but no one stops to warm themselves at it, and passersby only see a wisp
 				of smoke."
-				<footer class="blockquote-footer">Vincent Van Gogh in
-					<cite title="Source Title">Unknown</cite>
+				<footer class="blockquote-footer">Vincent Van Gogh
 				</footer>
 			</p>
 			<p>
-				"We Have Not Yet Learned What The Brain Has To Teach Us!"
-				<footer class="blockquote-footer">Chris Eliasmith in
-					<cite title="Source Title"><a href="https://www.youtube.com/watch?v=ZjDp8EnfDvo">Singularity Weblog
-							Podcast</a></cite>
+				"What we know is a drop, what we don't know is an ocean."
+				<footer class="blockquote-footer">Isaac Newton
 				</footer>
 			</p>
 		</blockquote>
