--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -63,8 +63,8 @@
 	<div class="container text-left">
 		<h1 class="text-center display-4">Projects</h1>
 		<p class="lead">
-			I was involved in the following school and personal projects (this page is outdated). Most of the projects can be found on my GitHub
-			<a href="https://github.com/Brian-Pho">here</a>.
+			I was involved in the following school and personal projects (this page is outdated). Some of the projects can be found on my
+			<a href="https://github.com/Brian-Pho">GitHub</a>.
 		</p>
 		<hr>
 		<!-- Find additional project colors here: http://hslpicker.com/#ede2fd -->
