Fix courses page

--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -313,9 +313,7 @@
 							</thead>
 							<tbody>
 								<tr>
-									<td title="Perspectives in Neuroscience">NEUROSCI 9510Y</td>
-									<td title="Perspectives in Neuroscience">NEUROSCI 9510Y</td>
-									<td title="Perspectives in Neuroscience">NEUROSCI 9510Y</td>
+									<td title="Perspectives in Neuroscience" colspan="3">NEUROSCI 9510Y</td>
 								</tr>
 								<tr>
 									<td title="Principles of Neuroscience">NEUROSCI 9500A</td>
@@ -337,9 +335,7 @@
 							</thead>
 							<tbody>
 								<tr>
-									<td title="Perspectives in Neuroscience">NEUROSCI 9511Y</td>
-									<td title="Perspectives in Neuroscience">NEUROSCI 9511Y</td>
-									<td title="Perspectives in Neuroscience">NEUROSCI 9511Y</td>
+									<td title="Perspectives in Neuroscience" colspan="3">NEUROSCI 9511Y</td>
 								</tr>
 							</tbody>
 						</table>
